--- a/Week1_07.ipynb
+++ b/Week1_07.ipynb
@@ -4,7 +4,6 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPG3V+8haiP5iXba8vOG7UH",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -37,7 +36,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "8mleiR4Xn4uy"
       },
@@ -76,7 +75,7 @@
         "id": "f8X0iCdThiCx",
         "outputId": "43d7656f-96c6-4631-bf0c-7a8579d92384"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -153,7 +152,7 @@
         "id": "BHXKwQlPkT6m",
         "outputId": "bc412c01-5335-4209-8171-21b25a25a56e"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -195,7 +194,7 @@
         "id": "V78yb5CBmkVv",
         "outputId": "e86fc305-271a-4ed0-bc7b-81c5dbae2b73"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -209,6 +208,50 @@
           "metadata": {}
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "1. Jelaskan, mengapa pada modul praktikum ini eksekusi kode Python dilakukan\n",
+        "menggunakan Google Colab?\n",
+        "\n",
+        "- Gratis dan mudah diakses\n",
+        "- Library sudah terinstall\n",
+        "- Tidak perlu setup Python lokal\n",
+        "- bisa connect dengan github dan drive\n",
+        "\n",
+        "2. Jelaskan mengenai kegunaan setiap library pada praktikum langkah ke\n",
+        "delapan? Apakah semua library tersebut harus digunakan dalam praktikum\n",
+        "sesi ini?\n",
+        "\n",
+        "- NumPy & Pandas: Diimpor tapi tidak secara langsung digunakan dalam kode yang ditampilkan.\n",
+        "- OpenCV (cv2): Digunakan untuk memproses gambar (baca, ubah warna, ubah ukuran, gabung gambar).\n",
+        "- cv2_imshow: Digunakan khusus di Colab untuk menampilkan gambar OpenCV.\n",
+        "- Skimage (io): Digunakan untuk membaca gambar dari URL.\n",
+        "- Skimage (transform) & PIL & Matplotlib: Diimpor tapi tidak secara langsung digunakan dalam kode yang ditampilkan.\n",
+        "3. Pada uji coba langkah ke-9 terdapat potongan kode program sebagai berikut :\n",
+        "\n",
+        "Apa kegunaan kode program tersebut?dan apa pengaruhnya jika tidak\n",
+        "dilakukan?\n",
+        "\n",
+        "**untuk me resize gambar menjadi ukuran setengahnya**\n",
+        "\n",
+        "4. Perhatikan potongan kode progam berikut :\n",
+        "\n",
+        "Apakah kegunaan kode [255,255,255] ? Jelaskan!\n",
+        "\n",
+        "**untuk menampilkan warna putih karena semakin besar bitnya akan menjadi warna putih**\n",
+        "\n",
+        "5. Jelaskan keterkaitan antara pixel dan juga resolusi gambar yang tinggi ataupun\n",
+        "rendah!\n",
+        "- Pixel = unit terkecil gambar\n",
+        "- Resolusi = jumlah pixel (lebar × tinggi)\n",
+        "- Resolusi tinggi = lebih banyak pixel = gambar lebih tajam\n",
+        "- Resolusi rendah = sedikit pixel = gambar kurang tajam"
+      ],
+      "metadata": {
+        "id": "XxpniCWYTpeF"
+      }
     },
     {
       "cell_type": "markdown",
@@ -239,7 +282,7 @@
         "id": "X_lQf49uow_X",
         "outputId": "1b9f4ee7-9dd5-4096-b2d7-641b8c08b5bf"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -277,7 +320,7 @@
         "id": "Oj6A3qidp5gm",
         "outputId": "47276442-175b-458d-c206-1882bcb1fe0a"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -317,7 +360,7 @@
         "id": "9zptQVwttdMs",
         "outputId": "60b5315a-f4e6-4d77-9f9b-9df5c1e37efb"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -358,7 +401,7 @@
         "id": "Fz0pya2tt57E",
         "outputId": "b7a334ce-d3b8-400f-ac1c-397794b6e6c9"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
